<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <Button
        android:id="@+id/btn_modimg"
        android:background="@drawable/btn_underline_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_icon_signal_36dp"
        android:drawableRight="@drawable/ic_right"
        android:drawableStart="@drawable/ic_icon_signal_36dp"
        android:drawableEnd="@drawable/ic_right"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="80dp"
        android:text="@string/mod_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_modinfo"
        android:background="@drawable/btn_underline_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/date"
        android:drawableRight="@drawable/ic_right"
        android:drawableStart="@drawable/ic_icon_mod_36dp"
        android:drawableEnd="@drawable/ic_right"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="160dp"
        android:text="@string/mod_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/select_time_button"
        android:background="@drawable/btn_underline_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_clock_36dp"
        android:drawableRight="@drawable/ic_right"
        android:drawableStart="@drawable/ic_clock_36dp"
        android:drawableEnd="@drawable/ic_right"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="240dp"
        android:text="@string/set_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/logout_button"
        android:background="@drawable/btn_underline_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_log_out_36dp"
        android:drawableRight="@drawable/ic_right"
        android:drawableStart="@drawable/ic_log_out_36dp"
        android:drawableEnd="@drawable/ic_right"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="320dp"
        android:text="@string/log_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</android.support.constraint.ConstraintLayout>