<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/user_img_horizontal_margin"
        android:layout_marginLeft="@dimen/user_img_horizontal_margin"
        android:layout_marginTop="@dimen/user_img_vertical_margin"
        android:contentDescription="@string/user_image_description"
        android:background="#6699FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/user_default" />


    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_horizontal_margin"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginTop="@dimen/user_name_vertical_margin"
        android:drawablePadding="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:drawableLeft="@drawable/ic_icon_signal"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/user_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_horizontal_margin"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginTop="@dimen/user_phone_vertical_margin"
        android:drawablePadding="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:drawableLeft="@drawable/ic_icon_phone"
        android:text="@string/phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <!--考虑换成ImageButton，点击更换状态和background-->
    <Button
        android:id="@+id/btn_onoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/on_off_button_bottom_margin"
        android:background="@drawable/btn_round_bg"
        android:drawableLeft="@drawable/ic_off_50dp"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="25dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/h_mode_spinner"
        android:layout_width="@dimen/spinner_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mode_spinner_horizontal_margin"
        android:layout_marginLeft="@dimen/mode_spinner_horizontal_margin"
        android:layout_marginTop="@dimen/home_spinner_vertical_margin"
        android:entries="@array/mode_array"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Spinner
        android:id="@+id/h_pos_spinner"
        android:layout_width="@dimen/spinner_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pos_spinner_horizontal_margin"
        android:layout_marginLeft="@dimen/pos_spinner_horizontal_margin"
        android:layout_marginTop="@dimen/home_spinner_vertical_margin"
        android:entries="@array/pos_array"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</android.support.constraint.ConstraintLayout>