<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/signup"
        android:textColor="#000"
        android:textSize="40sp"
        android:typeface="monospace"/>

    <RelativeLayout
        android:id="@+id/srl_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_title"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:background="@drawable/rectangle_edittext">

        <ImageView
            android:id="@+id/siv_userIconName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:src="@drawable/ic_icon_signal" />

        <View
            android:id="@+id/sviewName"
            android:layout_width="1dip"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/siv_userIconName"
            />

        <EditText
            android:id="@+id/set_userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/sviewName"
            android:background="@null"
            android:ems="19"
            android:hint="@string/username"
            android:maxLength="20"
            android:textColorHint="@color/colorCursor"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/set_userName"
            android:background="@color/black"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/srl_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/srl_userName"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:background="@drawable/rectangle_edittext">

        <ImageView
            android:id="@+id/iv_userIconPwdPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:src="@drawable/ic_icon_phone" />

        <View
            android:id="@+id/viewUserPhone"
            android:layout_width="1dip"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_userIconPwdPhone"
            />

        <EditText
            android:id="@+id/et_userphone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/viewUserPhone"
            android:background="@null"
            android:drawablePadding="5dp"
            android:ems="19"
            android:hint="@string/phone"
            android:maxLength="20"
            android:textColorHint="@color/colorCursor"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/et_userphone"
            android:background="@color/black"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/srl_userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/srl_phone"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:background="@drawable/rectangle_edittext">

        <ImageView
            android:id="@+id/siv_userIconPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:src="@drawable/ic_pwd" />

        <View
            android:id="@+id/sviewPwd"
            android:layout_width="1dip"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/siv_userIconPwd"
            />

        <EditText
            android:id="@+id/set_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/sviewPwd"
            android:background="@null"
            android:drawablePadding="5dp"
            android:ems="19"
            android:hint="@string/passwd"
            android:maxLength="20"
            android:inputType="textPassword"
            android:textColorHint="@color/colorCursor"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/set_password"
            android:background="@color/black"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/srl_userPassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:background="@drawable/rectangle_edittext">

        <ImageView
            android:id="@+id/iv_confirmuserIconPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:src="@drawable/ic_pwd" />

        <View
            android:id="@+id/viewConfirmPwd"
            android:layout_width="1dip"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_confirmuserIconPwd"
            />

        <EditText
            android:id="@+id/et_confimrpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/viewConfirmPwd"
            android:background="@null"
            android:drawablePadding="5dp"
            android:ems="19"
            android:hint="@string/confirm_passwd"
            android:maxLength="20"
            android:inputType="textPassword"
            android:textColorHint="@color/colorCursor"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/et_confimrpassword"
            android:background="@color/black"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_signup"
        android:background="@drawable/btn_selector"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_confirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signup"
        android:textColor="#fff"
        android:textSize="18sp" />

</RelativeLayout>